fix: height of Material Tabs (via https://stackoverflow.com/questions/50722183/angular-material-tab-height)

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,12 @@
         margin-right: auto;
     }
 }
+
+/* 100% tab fill */
+body, html {
+    height: 100%;
+    margin: 0;
+}
+.mat-tab-body-wrapper{
+    flex-grow: 1;
+}
